ajuste de background img

--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -1,6 +1,6 @@
 .home {
   
-    background-image: url('./Pages/Home/fundoHome.svg');
+    background-image: url('./fundoHome.svg');
     background-repeat: no-repeat;
     background-size: 100%;
   }
