--- a/src/Components/Navbar.module.css
+++ b/src/Components/Navbar.module.css
@@ -1,16 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 *{
-  font-family: "Ubuntu";
+  font-family: "Ubuntu" , sans-serif;
 }
 
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
+  padding: 10px 30px;
   background-color: #fff;
-  border-radius: 25px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 30px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  margin: 10px auto;
 }
 
 .logo {
@@ -19,51 +20,61 @@
 }
 
 .logo img {
-
+  width: 40px;
   margin-right: 10px;
 }
 
 .logo span {
   font-weight: bold;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   color: #333;
 }
 
-.search-bar {
+.searchBar {
   display: flex;
   align-items: center;
   background-color: #f0f0f0;
+  border: 2px solid #55a65b;
   border-radius: 25px;
   padding: 5px 10px;
+  max-width: 300px;
+  flex-grow: 1;
 }
 
-.search-bar input {
+.searchBar input {
   border: none;
   outline: none;
   background: transparent;
-  margin-left: 5px;
+  margin-left: 10px;
   padding: 5px;
+  width: 100%;
+  font-size: 1rem;
 }
 
-.search-icon {
+.searchIcon {
   color: #333;
 }
 
-.nav-links {
+.navLinks {
   display: flex;
   list-style: none;
+  gap: 20px;
 }
 
-.nav-links li {
-  margin-left: 20px;
+.navLinks li {
+  margin: 0px;
 }
 
-.nav-links a {
+.navLinks a {
   text-decoration: none;
   color: #333;
   font-weight: bold;
+  padding: 5px 10px;
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s;
 }
 
-.nav-links a:hover {
+.navLinks a:hover {
+  color:#fff;
   color: #55a65b; /* Cor do hover no link */
 }
