--- a/src/Components/Navbar.module.css
+++ b/src/Components/Navbar.module.css
@@ -1,16 +1,20 @@
+/* Estilização da Navbar e seus componentes */
+
+/* ↓ importação da fonte "Ubuntu" */
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 *{
-  font-family: "Ubuntu" , sans-serif;
-}
+  font-family: "Ubuntu"; 
+} 
 
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 30px;
+  padding: 12px 30px;
   background-color: #fff;
-  border-radius: 30px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 80px;
+  box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.2);
   margin: 10px auto;
 }
 
@@ -20,25 +24,20 @@
 }
 
 .logo img {
-  width: 40px;
-  margin-right: 10px;
-}
-
-.logo span {
-  font-weight: bold;
-  font-size: 1.4rem;
-  color: #333;
+  width: 100%;
+  min-width: 100px;
 }
 
 .searchBar {
   display: flex;
   align-items: center;
-  background-color: #f0f0f0;
-  border: 2px solid #55a65b;
-  border-radius: 25px;
+  background-color: #E1E1E1;
+  border-radius: 40px;
   padding: 5px 10px;
-  max-width: 300px;
+  max-width: 900px;
+  min-width: 200px;
   flex-grow: 1;
+  margin-left: 40px;
 }
 
 .searchBar input {
@@ -65,10 +64,10 @@
   margin: 0px;
 }
 
-.navLinks a {
+.navLinks a { 
   text-decoration: none;
-  color: #333;
-  font-weight: bold;
+  color: black; /* Cor do texto dos links */
+  font-weight: 400;
   padding: 5px 10px;
   border-radius: 5px;
   transition: background-color 0.3s, color 0.3s;
@@ -78,3 +77,4 @@
   color:#fff;
   color: #55a65b; /* Cor do hover no link */
 }
+
