--- a/src/Components/Navbar.module.css
+++ b/src/Components/Navbar.module.css
@@ -5,17 +5,25 @@
 
 *{
   font-family: "Ubuntu"; 
+  
 } 
+
+body {
+  margin: 0;
+  padding: 0;
+}
 
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 12px 30px;
+  padding: 20px 40px;
   background-color: #fff;
   border-radius: 80px;
   box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.2);
-  margin: 10px auto;
+  margin: 20px 20px;
+  z-index: 10;
+  position: relative;
 }
 
 .logo {
@@ -33,31 +41,30 @@
   align-items: center;
   background-color: #E1E1E1;
   border-radius: 40px;
-  padding: 5px 10px;
-  max-width: 900px;
+  padding: 7px 10px;
+  max-width: 640px;
   min-width: 200px;
   flex-grow: 1;
-  margin-left: 40px;
+  font-weight: 400;
+  font-size: medium;
 }
 
 .searchBar input {
   border: none;
   outline: none;
+  font-weight: 400;
+  font-size: larger;
   background: transparent;
   margin-left: 10px;
   padding: 5px;
   width: 100%;
-  font-size: 1rem;
-}
-
-.searchIcon {
-  color: #333;
+ 
 }
 
 .navLinks {
   display: flex;
   list-style: none;
-  gap: 20px;
+  gap: 50px;
 }
 
 .navLinks li {
@@ -68,13 +75,15 @@
   text-decoration: none;
   color: black; /* Cor do texto dos links */
   font-weight: 400;
+  font-size: larger;
   padding: 5px 10px;
   border-radius: 5px;
   transition: background-color 0.3s, color 0.3s;
 }
 
 .navLinks a:hover {
-  color:#fff;
   color: #55a65b; /* Cor do hover no link */
 }
+
+
 
