--- a/src/Components/Footer.module.css
+++ b/src/Components/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-    width: 100vw;
+    width: 100%;
     padding: 20px 20px;
     background-color: #2F592E;
     color:#C3F98F;
@@ -8,9 +8,10 @@
     align-items: center;
     box-sizing: border-box;
     margin: 0 auto;
-    position: relative;
-    top: 1800px;
+    position: static;
+    top: 1000px;
     left: 0px;
+    position: relative;
 
   
   }
