--- a/src/Components/LoginModal.module.css
+++ b/src/Components/LoginModal.module.css
@@ -11,11 +11,11 @@
     z-index: 1000;
 }
 
-.modal {
+.modalContent {
     position: relative;
     background: white;
     padding: 2rem;
-    border-radius: 20px;
+    border-radius: 30px;
     width: 400px;
     max-width: 90%;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
@@ -29,102 +29,7 @@
     overflow: hidden;
 }
 
-.CloseButton {
-    position:absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 2rem;
-    background: none;
-    border: none;
-    margin-right: 6px;
-    color: #000000;
-    cursor: pointer;
-    z-index: 10;
-}
-
-h1 {
-    font-size: 1.8rem;
-    color: #04312C;
-    margin-bottom: 1.5rem;
-
-}
-
-form {
-    width: 100%;
-}
-
-form label {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-bottom: 1rem;
-    width: 100%;
-}
-
-form input {
-    width: 100%;
-    padding: 1rem;
-    border: 1px solid #E6E6E6;
-    border-radius: 17px;
-    background: #E6E6E6;
-    margin-top: 2rem;
-    font-size: 1rem;
-    outline: none;
-    box-sizing: border-box;
-}
-
-form input::placeholder {
-    color: #676767;
-}
-
-form .btn {
-    width: 100px;
-    padding: 0.8rem;
-    background-color: #136E43;
-    color: white;
-    border: none;
-    border-radius: 15px;
-    cursor: pointer;
-    font-size: 1rem;
-    margin-top: 3rem;
-}
-
-form .btn:hover {
-    background: #459443;
-}
-
-form .btn:active {
-    background: #7FBD42;
-    transition: background-color 0.2s ease;
-}
-
-footer {
-    margin-top: 3rem;
-    text-align: left;
-    font-size: 0.9rem;
-    width: 90%;
-    position: absolute; 
-    bottom: 10px;
-    right: 20px;
-}
-
-footer a {
-    text-decoration: none;
-    color: #459443; 
-}
-
-footer a:hover {
-    text-decoration: underline;
-}
-
-footer a:active {
-    text-decoration: underline;
-    color: #2a5729;
-    transition: color 0.2s ease;
-
-}
-
-.modal::after {
+.modalContent::after {
     content: '';
     width: 100%;
     height: 180px;
@@ -137,15 +42,16 @@ footer a:active {
     border-bottom-right-radius: 20px;
 }
 
-.modal h1,
-.modal form,
-.modal footer {
-    position: relative;
-    z-index: 1;
+.CloseButton {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 2rem;
+    background: none;
+    border: none;
+    margin-right: 6px;
+    color: #000000;
+    cursor: pointer;
+    z-index: 10;
 }
 
-.error {
-    color: red;
-    font-size: 1rem;
-    margin-top: 1rem;
-}
