--- a/src/Components/Navbar.module.css
+++ b/src/Components/Navbar.module.css
@@ -11,6 +11,7 @@
 body {
   margin: 0;
   padding: 0;
+
 }
 
 .navbar {
@@ -21,9 +22,13 @@ body {
   background-color: #fff;
   border-radius: 80px;
   box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.2);
-  margin: 20px 20px;
-  z-index: 10;
-  position: relative;
+  margin: 20px auto;
+  z-index: 10; 
+  position: absolute; 
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 94%;
 }
 
 .logo {
