--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -1,41 +1,50 @@
-body,html {
+.Home {
+
+  position: relative;
+  min-height: 100vh;
+  width: 100%;
+  padding-top: 120px; /* Ajuste conforme a altura da NavBar */
+}
+
+.CabecalhoBackground {
   background: url('/Degrade.svg') no-repeat top center;
- 
+  background-size: 100% auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50vh;
+  z-index: 1; /* Define um z-index menor que o da NavBar */
 }
 
 .Drone {
   position: absolute;
-  z-index: 1;
-  top: 3.5%;
+  z-index: 2;
+  top: 3%;
   right: 50%;
-
 }
 
 .Review {
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   max-width: 400px;
-  top: 13%;
+  top: 8%;
   right: 15%;
 }
 
 .explicacao {
-  position: absolute;
-  top: 500px ;
-  z-index: 1;
+  position: relative;
+  top: 500px;
+  z-index: 2;
   left: 300px;
-
 }
 
 .Podium {
-
-  position: absolute;
-  top: 1200px ;
-  z-index: 1;
+  position: relative;
+  top: 700px;
+  z-index: 2;
   left: 150px;
-
 }
-
 
 
 
